docs: Phase 9.5〜13 対応 README.ja.md 更新
- Phase 9.5: チュートリアル 2（UBNF VS Code 拡張の作り方）追加
- Phase 10/12/13: DAPGenerator セクション全面改訂
  - parseAndCollectSteps / トークンツリー歩き図
  - ブレークポイント仕組み図
  - stopOnEntry: true 用 launch.json 例と操作表追加
- Phase 11: 「自己ホスティング」セクション新規追加
  - ラウンドトリップ検証フロー図
  - UBNFMapper バグ（コメント混入）と修正内容
  - 自己ホスティングの現状範囲一覧表
- ロードマップ Phase 9.5〜13 を完了に更新
- 目次に「自己ホスティング」追加

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>